# globeco-security-service

./: Dockerfile  OTEL_METRICS_FIX_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  __init__.py  beanie-migration.sh  build.sh  cursor-log.md  deploy-and-verify.sh  hello.py  kbuild.sh  openapi.yaml  pyproject.toml  requirements.txt  test-otel-metrics.py  test-standard-metrics.py  troubleshoot-otel.sh  verify-new-metrics.sh
.cursor/rules/: project-rules.mdc  python-rules.mdc
.github/workflows/: docker-multiarch-publish.yml
.kiro/specs/data-migration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/enhanced-http-metrics/: design.md  requirements.md  tasks.md
app/: config.py  main.py
app/api/: health.py  routes.py  utils_routes.py  v2_routes.py
app/core/: __init__.py  monitoring.py
app/migrations/: __init__.py  models.py  runner.py  v001_seed_security_data.py
app/migrations/data/: securities.json
app/models/: security.py  security_type.py
app/schemas/: security.py  security_type.py  v2_security.py
app/services/: security_service.py  security_type_service.py
documentation/: MISSING_METRICS_SOLUTION.md  OTEL_CONFIGURATION_GUIDE.md  SECURITY_SERVICE_API_GUIDE.md  SECURITY_SERVICE_SEARCH_REQUIREMENTS.md  enhanced-metrics.md  execution-plan.md  http-metrics-implementation-guide-python.md  requirements.md
k8s/: deploy.sh  deployment.yaml  globeco-security-service-mongodb.yaml  mongodb-persistent-volume.yaml
k8s_aws/: deployment.yaml  globeco-security-service-mongodb.yaml  hpa.yaml  k8s.lst  mongodb-persistent-volume-claim.yaml  service.yaml
kubernetes/: deployment.yaml
migrations/: 001_create_security_type.py  002_create_security.py
requirements/: requirement_001.md
tests/: conftest.py  test_security.py  test_security_type.py  test_v2_api_endpoints.py  test_v2_api_simple.py  test_v2_integration.py  test_v2_performance.py  test_v2_securities.py
