[project]
name = "globeco-security-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "dnspython>=2.7.0",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "mongo-migrate>=0.1.2",
]
